# GlycoQuest

./: .gitignore  .gitlab-ci.yml  Cargo.toml  DESIGN.md  LICENSE  PROMPT.md  README.md  mkdocs.yml  pyproject.toml  settings.ini
.github/workflows/: docs.yml  release.yml
V2.1.7/xquest/: README  merge.sh  xQuest.sh
configs/: msv000087442-full.ini
data/: rcsb_pdb_1HRP.fasta  rcsb_pdb_1HRP_no_contams.fasta  target_proteins_asf.fasta
data/MSV000087442/: PNT2-GPx-focused-xquest.fasta  PNT2-POC-xquest.fasta  PNT2-Protein-xquest.fasta
databases/: MSV000087442_SiaNAz.glyc  Nglyc309_Byonic.glyc  diagnostic_ion_catalog.txt  glycan_residues.txt  oxonium_ion_list.txt
docs/: index.md
docs/configuration/: cli-reference.md  crosslinkers.md  glycan-libraries.md  settings-reference.md
docs/getting-started/: first-run.md  installation.md  troubleshooting.md
docs/results/: interpreting-hits.md  network-csv-export.md  output-files.md  report.md
docs/science/: glycopeptide-crosslinking.md
docs/theory/: diagnostic-ions.md  glycopeptide-crosslinking.md
docs/viewer/: scientific-interpretation.md  using-the-viewer.md
docs/workflow/: overview.md  postfilter.md  prefilter.md  xquest-jobs.md
examples/MSV000087442/: accessions.txt  glycans.csv  poc-results.tsv  reference-candidate-scans.txt  reported-candidates.tsv  settings.ini
scripts/: bootstrap-euler-perl.sh  build_focused_gpx_fasta.py  check-xquest-perl.pl  mgf_to_mzxml.py  run.sh  sanitize_fasta_for_xquest.py  subset_fasta.py
scripts/ci/: package.sh
src/: cli.rs  fasta.rs  input.rs  lib.rs  main.rs  mzxml.rs  output.rs  progress.rs  settings.rs  xquest.rs
src/cli/: input.rs  mod.rs  settings.rs
src/crosslinker/: mod.rs  preset.rs
src/glycan/: catalog.rs  (+4 more)
viewer/: LICENSE  index.html  package-lock.json  package.json  serve-viewer.sh  tsconfig.test.json  vite.config.ts
(+495 files in other folders)
