[package]
name = "glycoquest"
version = "1.0.4"
edition = "2024"
description = "Prepare and run xQuest searches for DSS-crosslinked glycopeptide-peptide spectra."

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
configparser = "1.0"
console = "0.16"
flate2 = "1.1"
indicatif = "0.18"
rayon = "1.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "glycoquest"
path = "src/main.rs"
