[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "glycoquest"
version = "0.1.0"
description = "Prepare and run xQuest searches for DSS-crosslinked glycopeptide-peptide spectra."
requires-python = ">=3.11"

[project.scripts]
glycoquest = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli", "validation"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
